--- a/components/recovery_control/CMakeLists.txt
+++ b/components/recovery_control/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "recovery_control.c"
                     INCLUDE_DIRS "."
-                    REQUIRES driver config cots)
+                    REQUIRES driver config cots esp_timer servo)
